style(server): restore trailing newline in KafkaGateway